--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Thu Feb 14 2019 08:14:11 GMT+0000 (UTC)  -->
-<html data-wf-page="5c6475bbe7aecc7d57c722b2" data-wf-site="5c5655f8c3ddd35697e6edb1">
+<!--  Last Published: Thu Feb 14 2019 22:51:08 GMT+0000 (UTC)  -->
+<html data-wf-page="5c658d8e9a3f5b39e0d1d934" data-wf-site="5c5655f8c3ddd35697e6edb1">
 <head>
   <meta charset="utf-8">
   <title>About</title>
@@ -35,22 +35,22 @@
         <div class="icon-2 w-icon-nav-menu"></div>
       </div><a href="https://www.linkedin.com/company/csf-technologies-inc/" target="_blank" class="link fonticon"></a></div>
   </div>
-  <div class="section-22"><img src="images/2_2.png" srcset="images/2_2-p-500.png 500w, images/2_2.png 570w" sizes="(max-width: 479px) 262px, (max-width: 767px) 305px, (max-width: 991px) 347px, 475px" alt="" class="image-73">
+  <div class="section-22"><img src="images/Untitled-design-11.png" srcset="images/Untitled-design-11-p-500.png 500w, images/Untitled-design-11.png 570w" sizes="(max-width: 479px) 321px, (max-width: 767px) 389px, (max-width: 991px) 409px, 492px" alt="" class="image-73">
     <h1 class="heading-42">//////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////</h1>
     <div class="w-layout-grid grid-39">
-      <h1 id="w-node-2bff67b6973f-57c722b2" class="heading-60">ABOUT</h1>
+      <h1 id="w-node-2bff67b6973f-e0d1d934" class="heading-60">ABOUT</h1>
     </div>
   </div>
   <div class="section-23">
     <div class="w-layout-grid grid-40">
-      <h1 id="w-node-359209d14625-57c722b2" class="heading-70"><strong class="bold-text-9">An Information Technology Solutions Company<br></strong></h1>
-      <div id="w-node-bd4696eea050-57c722b2" class="div-block-68">
+      <h1 id="w-node-359209d14625-e0d1d934" class="heading-70"><strong class="bold-text-9">An Information Technology Solutions Company<br></strong></h1>
+      <div id="w-node-bd4696eea050-e0d1d934" class="div-block-68">
         <p class="paragraph-8">Founded in 2002 by Curtis Freeman, a Service Disabled Veteran of the U.S. Air Force, CSF Technologies, Inc. is an Information Technology Solutions Company. CSF delivers proactive management solutions and expert resources to support critical business technologies with detailed experience in IT Infrastructure Support and Systems Engineering. Committed to delivering innovative, agile, timely solutions that are cost efficient and effective.<br><br>CSF implements and supports managed solutions that include Help Desk, Audio/Visual and Telecom Equipment and Services, Network Operations and Database Administration. CSF is a trusted Value Added Reseller for numerous leading technology providers.<br></p>
       </div>
-      <div id="w-node-b8b4c1ed80cd-57c722b2" class="div-block-70">
+      <div id="w-node-b8b4c1ed80cd-e0d1d934" class="div-block-70">
         <p class="paragraph-10">CSF is SBA certified 8(a) Small Disadvantages Business, HUBZone and CVE Verified Service Disabled Veteran Owned Small Business. CSF is a privately held corporation located in Camden, New Jersey.<br>‍<br>CSF has over 10 years’ experience in providing services and products to a primarily Federal Government customer base, but also supports Local Government and commercial enterprises.</p>
         <a href="#" class="lightbox-link w-inline-block w-lightbox">
-          <h3 class="heading-71">Learn More About Us <span class="text-span-16"></span></h3><img src="images/Untitled-design-18.png" srcset="images/Untitled-design-18-p-500.png 500w, images/Untitled-design-18.png 570w" sizes="(max-width: 767px) 72vw, 427.5px" alt="" class="image-75">
+          <h3 class="heading-71">Click here to Learn More About Us <span class="text-span-16"></span></h3><img src="images/1_2.png" srcset="images/1_2-p-500.png 500w, images/1_2.png 570w" sizes="(max-width: 479px) 92vw, (max-width: 767px) 93vw, 547.1875px" alt="" class="image-75">
           <script type="application/json" class="w-json">{
   "items": [
     {
@@ -66,6 +66,7 @@
 }</script>
         </a>
       </div>
+      <h1 id="w-node-ee402e79af9a-e0d1d934" data-w-id="4f7dcd44-05db-ea06-1877-ee402e79af9a" style="-webkit-transform:translate3d(-500PX, 0PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(-500PX, 0PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(-500PX, 0PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(-500PX, 0PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0)" class="heading-80">CSF TECHNOLOGIES</h1>
     </div>
   </div>
   <div class="section-25">
@@ -79,7 +80,7 @@
     <div class="footer-bottom-wrap">
       <div class="legal">Copyright © 2019 <a href="https://jasonnavarro86.github.io/CSF_DEMO_SITE/#footer" class="footer-link">CSF Technologies</a>. All rights reserved.</div>
     </div>
-    <h1 class="heading-69">Call Us at <strong class="bold-text-7">888.495.7561 </strong>or Have Us Contact You:</h1><a href="contact.html" class="button-6 w-button">LETS TALK</a></div>
+    <h1 class="heading-69">Call Us at <strong class="bold-text-7">888.495.7561 </strong>or Have Us Contact You:</h1><a data-w-id="aa92b254-a220-42ee-5048-b7c528186823" href="contact.html" class="button-6 w-button">LETS TALK</a></div>
   <div class="csfmainfooter">
     <div class="w-layout-grid grid-38">
       <div id="w-node-dd2ccab0848d-cab0848b" class="div-block-67">
