--- a/contracts.html
+++ b/contracts.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Thu Feb 14 2019 08:14:11 GMT+0000 (UTC)  -->
-<html data-wf-page="5c6275b0c8dd8b7bcf84d660" data-wf-site="5c5655f8c3ddd35697e6edb1">
+<!--  Last Published: Thu Feb 14 2019 22:51:08 GMT+0000 (UTC)  -->
+<html data-wf-page="5c658d8e9a3f5ba023d1d92f" data-wf-site="5c5655f8c3ddd35697e6edb1">
 <head>
   <meta charset="utf-8">
   <title>Contracts</title>
@@ -42,15 +42,15 @@
     </div>
   </div>
   <div class="section-9">
-    <div id="w-node-7104f4da558f-cf84d660" class="w-layout-grid grid-3">
-      <h1 id="w-node-3b5ca9c45138-cf84d660" class="heading-20">Key Advantages of Purchasing Products and Supporting Services through CSF Technologies Contract Vehicles:<br></h1>
-      <ul id="w-node-d2a69d04c423-cf84d660" class="list">
+    <div id="w-node-7104f4da558f-23d1d92f" class="w-layout-grid grid-3">
+      <h1 id="w-node-3b5ca9c45138-23d1d92f" class="heading-20">Key Advantages of Purchasing Products and Supporting Services through CSF Technologies Contract Vehicles:<br></h1>
+      <ul id="w-node-d2a69d04c423-23d1d92f" class="list">
         <li class="list-item">Efficient way to purchase products and services</li>
         <li class="list-item">Pre-competed pricing</li>
         <li class="list-item">Services can be included</li>
         <li class="list-item">Low contract fee for government agencies</li>
       </ul>
-      <div id="w-node-13b2282a9ae5-cf84d660" class="div-block-39">
+      <div id="w-node-13b2282a9ae5-23d1d92f" class="div-block-39">
         <div class="w-layout-grid grid-11">
           <div id="w-node-e779221e95b4-221e95b3" class="div-block-35">
             <h2 class="heading-45">Contracts</h2>
@@ -66,19 +66,25 @@
           </div>
         </div>
       </div>
-      <h1 id="w-node-4833a0e86c96-cf84d660" class="heading-35">Information Technology Enterprise Solutions - 3S (ITES-3S)</h1>
-      <div id="w-node-3912e1fba22e-cf84d660" class="text-block-5"><strong>Award</strong>: Subcontractor<br><strong>Description</strong>: The ITES-3S scope includes a full range of innovative, world-class information technology support services and solutions necessary to satisfy Army mission requirements. Open to all Army, DoD and Federal Agencies.<strong> <br>Ordering Information: </strong><a href="http://‍http://www.infogateways.com/images/Downloads/IGI_ITES_3S_Ordering_Guide.pdf"><strong>Click Here.<br></strong></a><strong>Value</strong>: $12B<a href="http://‍http://www.infogateways.com/images/Downloads/IGI_ITES_3S_Ordering_Guide.pdf"><strong><br></strong></a></div>
-      <h1 id="w-node-f83af81a59c6-cf84d660" class="heading-35">Defense Logistics Agency J6 Enterprise Technology Services (DLA JETS)</h1>
-      <div id="w-node-1aee3f58d0ef-cf84d660" class="text-block-5"><strong>Award: </strong>Subcontractor<strong><br>Description:</strong> JETS provides the full range of <a href="https://www.teksynap.com/services/">Information Technology Services</a>, technical and management expertise that support applications, software, hardware, infrastructure, and systems, across the <a href="https://www.teksynap.com/">DLA IT Enterprise</a>.<br><strong>Value</strong>: $6B</div>
-      <h1 id="w-node-4eaf00fff777-cf84d660" class="heading-35">8(a) STARS II Governmentwide Acquisition Contract (GWAC)</h1>
-      <div id="w-node-4eaf00fff76b-cf84d660" class="text-block-5"><strong>Award: </strong>Prime<strong><br>Description:</strong> With a $10 Billion program ceiling and a five-year base period with one five-year option, 8(a) STARS II allows for long-term planning of large-scale program requirements while strengthening opportunities for 8(a) small businesses.<br><strong>Value</strong>: $10B</div>
-      <h4 id="w-node-4460c9c6596e-cf84d660" class="heading-48">Heading</h4>
-      <h4 id="w-node-5fb992e61dbd-cf84d660" class="heading-49">Heading</h4>
-      <div id="w-node-ee8c47a34b76-cf84d660" class="div-block-48">
-        <div class="w-layout-grid grid-19"></div>
+      <h1 id="w-node-4833a0e86c96-23d1d92f" class="heading-35">Information Technology Enterprise Solutions - 3S (ITES-3S)</h1>
+      <div id="w-node-3912e1fba22e-23d1d92f" class="text-block-5"><strong>Award</strong>: Subcontractor<br><strong>Description</strong>: The ITES-3S scope includes a full range of innovative, world-class information technology support services and solutions necessary to satisfy Army mission requirements. Open to all Army, DoD and Federal Agencies.<strong> <br>Ordering Information: </strong><a href="http://‍http://www.infogateways.com/images/Downloads/IGI_ITES_3S_Ordering_Guide.pdf"><strong>Click Here.<br></strong></a><strong>Value</strong>: $12B<a href="http://‍http://www.infogateways.com/images/Downloads/IGI_ITES_3S_Ordering_Guide.pdf"><strong><br></strong></a></div>
+      <h1 id="w-node-f83af81a59c6-23d1d92f" class="heading-35">Defense Logistics Agency J6 Enterprise Technology Services (DLA JETS)</h1>
+      <div id="w-node-1aee3f58d0ef-23d1d92f" class="text-block-5"><strong>Award: </strong>Subcontractor<strong><br>Description:</strong> JETS provides the full range of <a href="https://www.teksynap.com/services/">Information Technology Services</a>, technical and management expertise that support applications, software, hardware, infrastructure, and systems, across the <a href="https://www.teksynap.com/">DLA IT Enterprise</a>.<br><strong>Value</strong>: $6B</div>
+      <h1 id="w-node-4eaf00fff777-23d1d92f" class="heading-35">8(a) STARS II Governmentwide Acquisition Contract (GWAC)</h1>
+      <div id="w-node-4eaf00fff76b-23d1d92f" class="text-block-5"><strong>Award: </strong>Prime<strong><br>Description:</strong> With a $10 Billion program ceiling and a five-year base period with one five-year option, 8(a) STARS II allows for long-term planning of large-scale program requirements while strengthening opportunities for 8(a) small businesses.<br><strong>Value</strong>: $10B</div>
+      <h4 id="w-node-4460c9c6596e-23d1d92f" class="heading-48">Heading</h4>
+      <h4 id="w-node-5fb992e61dbd-23d1d92f" class="heading-49">Heading</h4>
+      <div id="w-node-ee8c47a34b76-23d1d92f" class="div-block-48">
+        <h1 data-w-id="a997f24b-2985-1323-c75b-a546b6e75369" style="opacity:0" class="heading-78">ITES-3S</h1>
       </div>
-      <div id="w-node-b306f69b4c78-cf84d660">
+      <div id="w-node-b306f69b4c78-23d1d92f">
         <div class="w-layout-grid grid-23"></div>
+      </div>
+      <div id="w-node-82911d076b41-23d1d92f" class="div-block-48">
+        <h1 data-w-id="ec9f6f95-7a18-127d-9b73-507a39a3c0f2" style="opacity:0" class="heading-77">DLA JETS</h1>
+      </div>
+      <div id="w-node-de6bf879099a-23d1d92f" class="div-block-48">
+        <h1 data-w-id="50489763-de39-078f-c0a0-3479a29e82ce" style="opacity:0" class="heading-76">GWAC</h1>
       </div>
     </div>
   </div>
@@ -96,7 +102,7 @@
     <div class="footer-bottom-wrap">
       <div class="legal">Copyright © 2019 <a href="https://jasonnavarro86.github.io/CSF_DEMO_SITE/#footer" class="footer-link">CSF Technologies</a>. All rights reserved.</div>
     </div>
-    <h1 class="heading-69">Call Us at <strong class="bold-text-7">888.495.7561 </strong>or Have Us Contact You:</h1><a href="contact.html" class="button-6 w-button">LETS TALK</a></div>
+    <h1 class="heading-69">Call Us at <strong class="bold-text-7">888.495.7561 </strong>or Have Us Contact You:</h1><a data-w-id="aa92b254-a220-42ee-5048-b7c528186823" href="contact.html" class="button-6 w-button">LETS TALK</a></div>
   <div class="csfmainfooter">
     <div class="w-layout-grid grid-38">
       <div id="w-node-dd2ccab0848d-cab0848b" class="div-block-67">
