--- a/gsa-8-a-stars-ii.html
+++ b/gsa-8-a-stars-ii.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Thu Feb 14 2019 08:14:11 GMT+0000 (UTC)  -->
-<html data-wf-page="5c6275b0c8dd8b6bbf84d663" data-wf-site="5c5655f8c3ddd35697e6edb1">
+<!--  Last Published: Thu Feb 14 2019 22:51:08 GMT+0000 (UTC)  -->
+<html data-wf-page="5c658d8e9a3f5b3f90d1d932" data-wf-site="5c5655f8c3ddd35697e6edb1">
 <head>
   <meta charset="utf-8">
   <title>GSA 8(a) STARS II</title>
@@ -37,23 +37,24 @@
   </div>
   <div class="section-15">
     <div class="w-layout-grid grid-28">
-      <h1 id="w-node-8cdd71e45e12-bf84d663" class="heading-60">GSA 8(a) STARS II</h1>
+      <h1 id="w-node-8cdd71e45e12-90d1d932" class="heading-60">GSA 8(a) STARS II</h1>
     </div>
     <h1 class="heading-42">////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////</h1><img src="images/Untitled-design-5.png" srcset="images/Untitled-design-5-p-500.png 500w, images/Untitled-design-5.png 570w" sizes="(max-width: 479px) 367px, (max-width: 767px) 417px, 570px" alt="" class="image-63"></div>
   <div>
     <div class="w-layout-grid grid-12">
-      <div id="w-node-62d30e2276d4-bf84d663" data-w-id="1eefb01c-0a04-5ac0-08f9-62d30e2276d4" style="-webkit-transform:translate3d(0, 317PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 317PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 317PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 317PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="div-block-46">
+      <div id="w-node-62d30e2276d4-90d1d932" data-w-id="1eefb01c-0a04-5ac0-08f9-62d30e2276d4" style="-webkit-transform:translate3d(0, 317PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 317PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 317PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 317PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="div-block-46">
         <div class="div-block-47"></div>
         <h2 class="heading-57">GSA 8(a) STARS II</h2>
         <div class="text-block-9"><span><strong>Contract Name:</strong> GSA 8(a) STARS II Government-Wide Acquisition Contract</span> <span class="text-span-2">(GWAC)</span><br><span class="text-span-5"><strong>Contract Number:</strong></span> GS00Q17GWD2399<br><strong>Constellations and Functional Areas:</strong> C1 FA2 and FA4<br><strong>Contract Types:</strong> Fixed Price / Labor Hour / Time and Materials<br><strong>Contractor DUNS Number:</strong> 128419095<br><strong>GSA 8(a) STARS II website:</strong> <a href="http://www.gsa.gov/8astars2">www.gsa.gov/8astars2<br>‍</a><strong>Point of Contact:</strong> Mr. Curtis Freeman | Program Manager<br><strong>Email:</strong> STARS2@csftechnologies.com<br><strong>Phone: </strong>888-495-7561 or 856-495-7561</div>
+        <h1 data-w-id="1096b4c7-b588-451c-bcb0-5e5663795747" style="opacity:0" class="heading-79">GSA 8 (a) STARS II</h1>
       </div>
-      <div id="w-node-9887b419d510-bf84d663" class="div-block-58">
+      <div id="w-node-9887b419d510-90d1d932" class="div-block-58">
         <div class="w-layout-grid grid-25">
-          <div id="w-node-d308dacecdd6-bf84d663" class="div-block-53">
+          <div id="w-node-d308dacecdd6-90d1d932" class="div-block-53">
             <div class="text-block-10">FOR MORE INFORMATION ABOUT <br>THIS CONTRACT</div><a href="contact.html" class="button-3 w-button">CONTACT US </a></div>
         </div>
       </div>
-      <div id="w-node-04cb7af4e5ca-bf84d663" class="div-block-57">
+      <div id="w-node-04cb7af4e5ca-90d1d932" class="div-block-57">
         <div class="w-layout-grid grid-11">
           <div id="w-node-e779221e95b4-221e95b3" class="div-block-35">
             <h2 class="heading-45">Contracts</h2>
@@ -79,7 +80,7 @@
     <div class="footer-bottom-wrap">
       <div class="legal">Copyright © 2019 <a href="https://jasonnavarro86.github.io/CSF_DEMO_SITE/#footer" class="footer-link">CSF Technologies</a>. All rights reserved.</div>
     </div>
-    <h1 class="heading-69">Call Us at <strong class="bold-text-7">888.495.7561 </strong>or Have Us Contact You:</h1><a href="contact.html" class="button-6 w-button">LETS TALK</a></div>
+    <h1 class="heading-69">Call Us at <strong class="bold-text-7">888.495.7561 </strong>or Have Us Contact You:</h1><a data-w-id="aa92b254-a220-42ee-5048-b7c528186823" href="contact.html" class="button-6 w-button">LETS TALK</a></div>
   <div class="csfmainfooter">
     <div class="w-layout-grid grid-38">
       <div id="w-node-dd2ccab0848d-cab0848b" class="div-block-67">
