--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Thu Feb 14 2019 08:14:11 GMT+0000 (UTC)  -->
-<html data-wf-page="5c6275b0c8dd8b141584d65b" data-wf-site="5c5655f8c3ddd35697e6edb1">
+<!--  Last Published: Thu Feb 14 2019 22:51:08 GMT+0000 (UTC)  -->
+<html data-wf-page="5c658d8e9a3f5b4329d1d92a" data-wf-site="5c5655f8c3ddd35697e6edb1">
 <head>
   <meta charset="utf-8">
   <title>CSF</title>
@@ -52,14 +52,14 @@
           <h1 class="heading-62">Full-Scale Provider of IT Products</h1>
           <p class="paragraph-2 topboarder"><strong>CSF Technologies is a </strong> <span>Full-Scale Provider</span> of IT Products and Related Services to the Federal Government. Our technical experience and understanding of IT Infrastructure services and security allows us to provide the best value purchasing opportunities to our Federal agency customers.</p>
           <div class="w-layout-grid grid-34">
-            <div id="w-node-5d842a256bb2-1584d65b" data-w-id="b5ad9880-d791-eb4f-61d1-5d842a256bb2" class="div-block-59 left">
+            <div id="w-node-5d842a256bb2-29d1d92a" data-w-id="b5ad9880-d791-eb4f-61d1-5d842a256bb2" class="div-block-59 left">
               <div data-w-id="e5e831ef-4fbe-12af-6463-426481c3775e" class="iconblock iconleft">
                 <div data-w-id="dc3c9505-412e-9a86-4e33-31e658184084" class="iconcircle left"></div>
               </div>
               <h3 class="colheading"><strong class="bold-text-6">A Prime Contractor<br></strong><span class="text-span-8"></span></h3>
               <p class="paragraph-2"><strong>We are a Prime Contractor </strong>and Subcontractor on GWACs, and IDIQs, designed to provide Information Technology products and services directly tofederal agencies. We also service local government, educational institutions and commercial companies.</p>
             </div>
-            <div id="w-node-00fff479e129-1584d65b" data-w-id="f47f5d1f-0880-db0c-b7f6-00fff479e129" class="div-block-59 right">
+            <div id="w-node-00fff479e129-29d1d92a" data-w-id="f47f5d1f-0880-db0c-b7f6-00fff479e129" class="div-block-59 right">
               <div data-w-id="f47f5d1f-0880-db0c-b7f6-00fff479e12a" class="iconblock">
                 <div data-w-id="f47f5d1f-0880-db0c-b7f6-00fff479e12b" class="iconcircle right"></div>
               </div>
@@ -115,13 +115,13 @@
       </div>
     </div>
     <div class="w-layout-grid grid-35">
-      <div id="w-node-b60bfc14524b-1584d65b" class="div-block-60"><a href="contact.html" class="button-5 w-button">LETS TALK</a>
+      <div id="w-node-b60bfc14524b-29d1d92a" class="div-block-60"><a href="contact.html" class="button-5 w-button">LETS TALK</a>
         <div class="div-block-61"></div>
       </div>
     </div>
   </div>
   <div class="w-layout-grid grid-32">
-    <div id="w-node-9742eae3ffd7-1584d65b" class="div-block-55"><a href="#" class="button-4 w-button">LETS TALK</a>
+    <div id="w-node-9742eae3ffd7-29d1d92a" class="div-block-55"><a href="#" class="button-4 w-button">LETS TALK</a>
       <div class="div-block-56"></div>
     </div>
   </div>
@@ -190,7 +190,7 @@
     <div class="footer-bottom-wrap">
       <div class="legal">Copyright © 2019 <a href="https://jasonnavarro86.github.io/CSF_DEMO_SITE/#footer" class="footer-link">CSF Technologies</a>. All rights reserved.</div>
     </div>
-    <h1 class="heading-69">Call Us at <strong class="bold-text-7">888.495.7561 </strong>or Have Us Contact You:</h1><a href="contact.html" class="button-6 w-button">LETS TALK</a></div>
+    <h1 class="heading-69">Call Us at <strong class="bold-text-7">888.495.7561 </strong>or Have Us Contact You:</h1><a data-w-id="aa92b254-a220-42ee-5048-b7c528186823" href="contact.html" class="button-6 w-button">LETS TALK</a></div>
   <div class="csfmainfooter">
     <div class="w-layout-grid grid-38">
       <div id="w-node-dd2ccab0848d-cab0848b" class="div-block-67">
