--- a/services.html
+++ b/services.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Thu Feb 14 2019 22:51:08 GMT+0000 (UTC)  -->
+<!--  Last Published: Fri Feb 15 2019 00:19:53 GMT+0000 (UTC)  -->
 <html data-wf-page="5c658d8e9a3f5b8925d1d935" data-wf-site="5c5655f8c3ddd35697e6edb1">
 <head>
   <meta charset="utf-8">
@@ -95,7 +95,8 @@
         <div class="text-block-20">CSF offers integrated Audio Visual (AV) and Video Teleconferencing (VTC) solutions. The solutions includes complete life-cycle support including analysis, design, integration, implementation, training and operations and maintenance services. CSF capabilities range from adding a single projector to implementing an enterprise-wide communications infrastructure.</div>
       </div>
       <div id="w-node-43efaabc5351-25d1d935" class="div-block-73"></div>
-      <div id="w-node-7559f03c4322-25d1d935" class="div-block-74"><a href="contact.html" class="button-8 w-button">Learn More <span></span></a></div><img src="images/1_1.png" srcset="images/1_1-p-500.png 500w, images/1_1.png 570w" sizes="(max-width: 570px) 100vw, 570px" id="w-node-b87610730f92-25d1d935" data-w-id="075aedc8-c364-6269-95f1-b87610730f92" alt="" class="image-87"></div>
+      <div id="w-node-7559f03c4322-25d1d935" class="div-block-74"><a href="contact.html" class="button-8 w-button">Learn More <span></span></a></div>
+    </div>
   </div>
   <div class="footer-bottom">
     <div class="footer-bottom-wrap">
