--- a/about.html
+++ b/about.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Thu Feb 14 2019 22:51:08 GMT+0000 (UTC)  -->
+<!--  Last Published: Fri Feb 15 2019 00:19:53 GMT+0000 (UTC)  -->
 <html data-wf-page="5c658d8e9a3f5b39e0d1d934" data-wf-site="5c5655f8c3ddd35697e6edb1">
 <head>
   <meta charset="utf-8">
@@ -35,7 +35,7 @@
         <div class="icon-2 w-icon-nav-menu"></div>
       </div><a href="https://www.linkedin.com/company/csf-technologies-inc/" target="_blank" class="link fonticon"></a></div>
   </div>
-  <div class="section-22"><img src="images/Untitled-design-11.png" srcset="images/Untitled-design-11-p-500.png 500w, images/Untitled-design-11.png 570w" sizes="(max-width: 479px) 321px, (max-width: 767px) 389px, (max-width: 991px) 409px, 492px" alt="" class="image-73">
+  <div class="section-22">
     <h1 class="heading-42">//////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////</h1>
     <div class="w-layout-grid grid-39">
       <h1 id="w-node-2bff67b6973f-e0d1d934" class="heading-60">ABOUT</h1>
@@ -50,7 +50,7 @@
       <div id="w-node-b8b4c1ed80cd-e0d1d934" class="div-block-70">
         <p class="paragraph-10">CSF is SBA certified 8(a) Small Disadvantages Business, HUBZone and CVE Verified Service Disabled Veteran Owned Small Business. CSF is a privately held corporation located in Camden, New Jersey.<br>‍<br>CSF has over 10 years’ experience in providing services and products to a primarily Federal Government customer base, but also supports Local Government and commercial enterprises.</p>
         <a href="#" class="lightbox-link w-inline-block w-lightbox">
-          <h3 class="heading-71">Click here to Learn More About Us <span class="text-span-16"></span></h3><img src="images/1_2.png" srcset="images/1_2-p-500.png 500w, images/1_2.png 570w" sizes="(max-width: 479px) 92vw, (max-width: 767px) 93vw, 547.1875px" alt="" class="image-75">
+          <h3 class="heading-71">Click here to Learn More About Us <span class="text-span-16"></span></h3><img src="images/Untitled-design-18.png" srcset="images/Untitled-design-18-p-500.png 500w, images/Untitled-design-18.png 570w" sizes="(max-width: 767px) 79vw, 467.390625px" alt="" class="image-75">
           <script type="application/json" class="w-json">{
   "items": [
     {
