--- a/contact.html
+++ b/contact.html
@@ -50,7 +50,7 @@
           </div>
         </div>
         <div id="w-node-3dab143ee96b-1cd1d933" class="div-block-63"></div>
-        <div id="w-node-5c58518ff477-1cd1d933" class="text-block-16">Whether you’re looking for _____________, _____________, or ____________________ services, we’re here to help. Contact us today to learn what it’s like to work with our team of IT support specialists and how we can help your business succeed.</div>
+        <div id="w-node-5c58518ff477-1cd1d933" class="text-block-16">No matter what you’re looking for, we’re here to help. Contact us today to learn what it’s like to work with our team of IT support specialists and how we can help your business succeed.</div>
         <div id="w-node-2294686bd7b3-1cd1d933" class="div-block-65 top"><img src="images/Icon-location.png" height="45" width="45" alt="" class="image-70">
           <h2 class="heading-64">LOCATION<br></h2>
           <div class="text-block-14">3251 Progress Drive Suite 129<br>Orlando FL 32826</div>
